# pocket-isr

./: .gitignore  CHANGES  Makefile  README  vars.mk
artwork/: .gitignore  Attribution  Credits  Makefile  pocket-isr-artwork.spec
iso/: .gitignore  Makefile  fedora-live-base.ks  pocket-isr.ks.in
repo/: RPM-GPG-KEY-pocket-isr  pocket-isr-release.spec  pocket-isr.repo
tools/: .gitignore  acinclude.m4  configure.ac  pocket-isr-tools.spec
tools/src/: .gitignore  Makefile.am  check_isr_storage  early-scratch-setup  gather_free_space.c  pocket_isr_update  remount_live_volume  show_isr_storage
virtualbox/: virtualbox-3.0.14-ftbfs.patch  virtualbox-ose-3.0.spec  virtualbox-ose-3.1.spec  virtualbox-ose-3.2.spec  virtualbox-ose-LocalConfig.kmk
